// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests Default options 1`] = `
<body>
  <div />
  <svg
    height="480px"
    viewBox="0 0 640 480"
    width="640px"
  >
    <rect
      fill="white"
      height="480px"
      width="640px"
      x="0"
      y="0"
    />
  </svg>
</body>
`;

exports[`Snapshot tests Default options 2`] = `"<svg viewBox=\\"0 0 640 480\\" width=\\"640px\\" height=\\"480px\\"><rect fill=\\"white\\" x=\\"0\\" y=\\"0\\" width=\\"640px\\" height=\\"480px\\"></rect></svg>"`;

exports[`Snapshot tests Draw animations 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 40 L353.923 100 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="d"
        dur="3s"
        repeatCount="indefinite"
        values="M250 40 L353.923 100 L250 160 L146.077 100z;M250 100 L353.923 160 L250 220 L146.077 160z;M250 40 L353.923 100 L250 160 L146.077 100z"
      />
      <animate
        attributeName="fill"
        dur="3s"
        repeatCount="indefinite"
        values="#FFF;#DDD;#FFF"
      />
    </path>
    <path
      d="M353.923 220 L250 280 L250 160 L353.923 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="d"
        dur="3s"
        from="M353.923 220 L250 280 L250 160 L353.923 100z"
        repeatCount="indefinite"
        to="M353.923 220 L250 280 L250 220 L353.923 160z"
      />
      <animate
        attributeName="fill"
        dur="3s"
        repeatCount="indefinite"
        values="#FFF;#DDD;#FFF"
      />
    </path>
    <path
      d="M146.077 220 L250 280 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    >
      <animate
        attributeName="d"
        dur="3s"
        repeatCount="indefinite"
        values="M146.077 220 L250 280 L250 220 L146.077 160z"
      />
      <animate
        attributeName="fill"
        dur="3s"
        repeatCount="indefinite"
        values="#FFF;#DDD;#FFF"
      />
    </path>
  </svg>
</div>
`;

exports[`Snapshot tests Draw circles 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M198.0385 130 A 73.484658 42.426407 0 0 0 301.9615 70 A 73.484658 42.426407 180 0 0 198.0385 130z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 220 A 73.484684 42.426392 119.999977 0 0 353.923 160 A 73.484684 42.426392 -60.000023 0 0 250 220z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M146.077 160 A 73.484684 42.426392 60.000023 0 0 250 220 A 73.484684 42.426392 -119.999977 0 0 146.077 160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Draw commands 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M353.923 220 L250 280 L250 250 L301.9615 220 L301.9615 130 L353.923 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M224.01925 85 A 36.742342 21.213196 60.000023 0 0 275.98075 115 L327.94225 85 A 36.742342 21.213196 60.000023 0 1 275.98075 55 L224.01925 85z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M353.923 100 L327.94225 85 L275.98075 115 L301.9615 130 L353.923 100 M250 40 L275.98075 55 L224.01925 85 L198.0385 70 L250 40z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M198.0385 130 L250 160 L198.0385 190 L146.077 160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 160 L301.9615 220 L250 250 L198.0385 190z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M198.0385 70 L198.0385 130 L250 160 L301.9615 220 L301.9615 130 L275.98075 115 A 36.742342 21.213196 60.000023 0 1 224.01925 85 L198.0385 70z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M146.077 160 L198.0385 190 L250 250 L250 280 L146.077 220z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Draw curves with method aliases 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 40 M275.98075 55 A 36.742342 21.213196 60.000023 0 0 327.94225 85 L353.923 100 L353.923 130 A 36.742342 21.213196 -119.999977 0 0 353.923 190 L353.923 220 L327.94225 235 A 36.742329 21.213203 -180 0 0 275.98075 265 L250 280 L224.01925 265 A 36.742329 21.213203 0 0 0 172.05775 235 L146.077 220 L146.077 190 A 36.742342 21.213196 -60.000023 0 0 146.077 130 L146.077 100 L172.05775 85 A 36.742342 21.213196 119.999977 0 0 224.01925 55 L250 40z"
      fill="#EEE"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 40 L275.98075 55 A 36.742329 21.213203 180 0 0 327.94225 85 L353.923 100 L327.94225 115 A 36.742329 21.213203 -180 0 0 275.98075 145 L250 160 L224.01925 145 A 36.742329 21.213203 0 0 0 172.05775 115 L146.077 100 L172.05775 85 A 36.742329 21.213203 0 0 0 224.01925 55 L250 40z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M353.923 100 L353.923 130 A 36.742342 21.213196 119.999977 0 0 353.923 190 L353.923 220 L327.94225 235 A 36.742342 21.213196 -60.000023 0 0 275.98075 265 L250 280 L250 250 A 36.742342 21.213196 -60.000023 0 0 250 190 L250 160 L275.98075 145 A 36.742342 21.213196 119.999977 0 0 327.94225 115 L353.923 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 160 L250 190 A 36.742342 21.213196 -119.999977 0 0 250 250 L250 280 L224.01925 265 A 36.742342 21.213196 -119.999977 0 0 172.05775 235 L146.077 220 L146.077 190 A 36.742342 21.213196 60.000023 0 0 146.077 130 L146.077 100 L172.05775 115 A 36.742342 21.213196 60.000023 0 0 224.01925 145 L250 160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Draw methods 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 100 L353.923 160 L250 220 L146.077 160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M353.923 160 L353.923 220 L250 280 L250 220z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 220 L250 280 L146.077 220 L146.077 160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 40 L301.9615 70 L250 130 L198.0385 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M301.9615 70 L250 130 L250 190 L301.9615 160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 130 L198.0385 100 L198.0385 160 L250 190z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Draw rectangles 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 40 L353.923 100 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M353.923 220 L250 280 L250 160 L353.923 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M146.077 220 L250 280 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Paths without autoclose 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 160 L353.923 220 L250 280 L146.077 220z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250 160 L353.923 220 L250 280 L146.077 220"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Remove animations 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250 40 L353.923 100 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M353.923 220 L250 280 L250 160 L353.923 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M146.077 220 L250 280 L250 160 L146.077 100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M146.077 220 A 146.969316 84.852814 0 0 0 353.923 100 A 146.969316 84.852814 180 0 0 146.077 220z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;
